[package]
name = "rspw"
version = "0.1.1"
edition = "2021"
authors = ["Timo G. <timo.gr@hotmail.de>"]
description = "A command line password generator written in rust"
readme = "README.md"
keywords = ["password", "generator", "random", "rand", "cli"]
categories = ["command-line-utilities"]
license = "MIT"
homepage = "https://github.com/Timgrau/rspw"
repository = "https://github.com/Timgrau/rspw"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = {version = "4.3.0", features = ["derive"]}
cli-clipboard = "0.4.0"